Fix tables going off page on small screens

--- a/themes/aevum/assets/css/main.css
+++ b/themes/aevum/assets/css/main.css
@@ -100,16 +100,19 @@ pre, code {
 /* } */
 
 table {
-    width: 100%;
-    max-width: 100%;
+    display: block;
+    white-space: nowrap;
     border-collapse: collapse;
     overflow: auto;
+    table-layout: fixed;
+    width: 100%;
 }
 
 th, td {
     text-align: center;
     border: 1px solid #ddd;
     padding: 8px;
+    width: 1%;
 }
 
 th {
